--- a/src/main/resources/templates/InstantSearchResults.html
+++ b/src/main/resources/templates/InstantSearchResults.html
@@ -15,8 +15,7 @@
             <td colspan="4">No results</td>
         </tr>
         <tr th:each="entry : ${response.entries}">
-            <td><a th:href="${entry.link}" th:text="${entry.text}" style="text-decoration: none; color: black;">Text
-                ...</a></td>
+            <td><p th:text="${entry.text}">Text ...</p><a th:href="${entry.link}">Link ...</a></td>
         </tr>
     </table>
 </div>
