Code improvements,  tests added.

--- a/src/main/resources/templates/InstantSearchResults.html
+++ b/src/main/resources/templates/InstantSearchResults.html
@@ -15,7 +15,7 @@
             <td colspan="4">No results</td>
         </tr>
         <tr th:each="entry : ${response.entries}">
-            <td><p th:text="${entry.text}">Text ...</p><a th:href="${entry.link}">Link ...</a></td>
+            <td><p th:text="${entry.text}">Text</p><a th:href="${entry.link}">link</a></td>
         </tr>
     </table>
 </div>
