--- a/src/main/resources/templates/InstantSearchResults.html
+++ b/src/main/resources/templates/InstantSearchResults.html
@@ -10,12 +10,18 @@
     <table th:each="response : ${results.responses}">
         <tr>
             <th th:text="${response.name}">Title ...</th>
+            <td th:text="'Count:' + ${response.count}">Count: 2</td>
         </tr>
         <tr th:if="${results.empty}">
             <td colspan="4">No results</td>
         </tr>
         <tr th:each="entry : ${response.entries}">
-            <td><p th:text="${entry.text}">Text</p><a th:href="${entry.link}">link</a></td>
+            <td>
+                <div>
+                    <p th:utext="${entry.text}">Text</p>
+                    <a th:href="${entry.link}" th:text="${entry.link}">link</a>
+                </div>
+            </td>
         </tr>
     </table>
 </div>
